# JNISample

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  utils.gradle
app/src/androidTest/java/com/megvii/guoyizhe/jnisamples/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.h  native-lib.cpp  testHeader.cpp  testHeader.h  testVal.cpp  testVal.h
app/src/main/java/com/megvii/guoyizhe/jnisamples/: ITest.java  LessonActivity.java  MainActivity.java
app/src/main/res/layout/: activity_lesson.xml  activity_main.xml  item_text.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/megvii/guoyizhe/jnisamples/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
